restructuring write-up and including intrinsic autoregressive model

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,85 +2,63 @@
 title: "Exact sparse CAR models in Stan"
 author: "Max Joseph"
 date: "August 20, 2016"
-output: pdf_document
+output: 
+  html_document:
+    keep_md: true
 ---
 
-## About 
 
 This document details sparse exact conditional autoregressive (CAR) models in Stan as an extension of previous work on approximate sparse CAR models in Stan. 
 Sparse representations seem to give order of magnitude efficiency gains, scaling better for large spatial data sets. 
 
-## Background
+## CAR priors for spatial random effects
 
 Conditional autoregressive (CAR) models are popular as prior distributions for spatial random effects with areal spatial data. 
-For instance if we have a Poisson likelihood with spatial random effects: 
+If we have a random quantity $\phi = (\phi_1, \phi_2, ..., \phi_n)'$ at $n$ areal locations, the CAR model is often expressed via full conditional distributions:
 
-$$y_i \sim \text{Poisson}(\text{exp}(X_{i}^T \beta + \phi_i + \log(\text{offset}_i)))$$
+$$\phi_i \mid \phi_j, j \neq i \sim N(\alpha \sum_{j = 1}^n b_{ij} \phi_j, \tau_i^{-1})$$
 
-where $X$ is a design matrix, $\beta$ is a vector of coefficients, and $\phi_i$ is a spatial adjustment  for locations $i=1, ..., n$. 
-In a CAR model, the conditional distribution of the spatial random effect $\phi_i$ is univariate normal with an expected value that is a function of the spatial adjustments of the other locations:
+where $\tau_i$ is a spatially varying precision parameter, and $b_{ii} = 0$. 
 
-$$\phi_i \mid \phi_j, j \neq i \sim \text{N}(\rho \sum_j b_{ij} \phi_j, \tau_i^2)$$
+By Brook's Lemma, the joint distribution of $\phi$ is then:
 
-Here $\rho$ is a parameter that ensures propriety of the joint distrbution of $\phi$ (Gelfand & Vounatsou 2003).
-The joint distribution of the vector of spatial random effects is multivariate normal: 
+$$\phi \sim N(0, [D_\tau (I - \alpha B)]^{-1}).$$
 
-$$ \phi \sim \text{N}(0, [D_\tau (I - \rho B)]^{-1})$$
+If we assume the following:
 
-where $D_\tau = \text{diag}(\tau_i)$, and $\tau_i$ is a precision parameter. 
-If the precision is constant spatially, then $\tau$ is a scalar and $D_\tau = \tau D$ where $D = \text{diag}(m_i)$ and $m_i$ is the number of spatial neighbors for location $i$. 
-$I$ is an $n \times n$ identity matrix, and $B = D^{-1} W$ where $W$ is the map adjacency matrix ($w_{ii} = 0, w_{ij} = 1$ if $i$ is a neighbor of $j$, and $w_{ij}=0$ otherwise).
-In most applications, $W$ tends to be sparse.
+- $D_\tau = \tau D$
+- $D = diag(m_i)$: an $n \times n$ diagonal matrix with $m_i$ = the number of neighbors for location $i$
+- $I$: an $n \times n$ identity matrix
+- $\alpha$: a parameter that controls spatial dependence ($\alpha = 0$ implies spatial independence, and $\alpha = 1$ collapses to an *intrisnic conditional autoregressive* (IAR) specification)
+- $B = D^{-1} W$: the scaled adjacency matrix
+- $W$: the adjacency matrix ($w_{ii} = 0, w_{ij} = 1$ if $i$ is a neighbor of $j$, and $w_{ij}=0$ otherwise)
 
-When $\tau$ is a scalar, this multivariate normal prior can be rewritten as: 
+then the CAR prior specification simplifies to: 
 
-$$ \phi \sim \text{N}(0, [\tau (D - \rho W)]^{-1})$$
+$$\phi \sim N(0, [\tau (D - \alpha W)]^{-1}).$$
 
-where $\tau (D - \rho W)$ is the precision matrix $\Sigma^{-1}$.
+The $\alpha$ parameter ensures propriety of the joint distrbution of $\phi$ as long as $| \alpha | < 1$ (Gelfand & Vounatsou 2003).
+However, $\alpha$ is often taken as 1, leading to the IAR specification which creates a singular precision matrix and an improper prior distribution.
 
-such that the log probability of $\phi$ is: 
+## A Poisson specification
 
-$$\log(p(\phi \mid \tau, \rho)) = - \frac{n}{2} \log(2 \pi) + \frac{1}{2} \log(\text{det}( \Sigma^{-1})) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+Suppose we have aggregated count data $y_1, y_2, ..., y_n$ at $n$ locations, and we expect that neighboring locations will have similar counts. 
+With a Poisson likelihood: 
 
-We only need the log posterior up to an additive constant so we can drop the first term. 
-Then, we'll substitute in $\tau (D - \rho W)$:
+$$y_i \sim \text{Poisson}(\text{exp}(X_{i} \beta + \phi_i + \log(\text{offset}_i)))$$
 
-$$\frac{1}{2} \log(\text{det}(\tau (D - \rho W))) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+where $X_i$ is a design vector (the $i^{th}$ row from a design matrix), $\beta$ is a vector of coefficients, $\phi_i$ is a spatial adjustment, and $\log(\text{offset}_i)$ accounts for differences in expected values or exposures at the spatial units (popular choices include area for physical processes, or population size for disease applications). 
 
-$$ = \frac{1}{2} \log(\tau ^ n \text{det}(D - \rho W)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+If we specify a proper CAR prior for $\phi$, then we have that $\phi \sim \text{N}(0, [\tau (D - \alpha W)]^{-1})$ where $\tau (D - \alpha W)$ is the precision matrix $\Sigma^{-1}$.
+A complete Bayesian specification would include priors for the remaining parameters $\alpha$, $\tau$, and $\beta$, such that our posterior distribution is: 
 
-$$ = \frac{n}{2} \log(\tau) + \frac{1}{2} \log(\text{det}(D - \rho W)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
-
-## Fast exact determinant calculations
-
-Previous implementations in Stan have benefitted from sparse representations to expedite computation of $\phi^T \Sigma^{-1} \phi$, and have also used approximations to avoid explicit computation of the determinant, e.g., this implementation from Kyle Foreman: https://groups.google.com/d/topic/stan-users/M7T7EIlyhoo/discussion
-
-Jin, Carlin, and Banerjee (2005) present a clever and efficient way to compute the determinant term that does not rely on any approximations:
-
-$$\text{det}(D - \rho W) \propto \prod_{i = 1}^n (1 - \rho \lambda_i)$$
-
-where $\lambda_1, ..., \lambda_n$ are the eigenvalues of $D^{-\frac{1}{2}} W D^{-\frac{1}{2}}$, which can be computed ahead of time and passed in as data. 
-Because we only need the log posterior up to an additive constant, we can use this result which is proportional up to some multiplicative constant $c$: 
-
-$$\frac{n}{2} \log(\tau) + \frac{1}{2} \log(c \prod_{i = 1}^n (1 - \rho \lambda_i)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
-
-$$= \frac{n}{2} \log(\tau) + \frac{1}{2} \log(c) +  \frac{1}{2} \log(\prod_{i = 1}^n (1 - \rho \lambda_i)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
-
-Again dropping additive constants: 
-
-$$\frac{n}{2} \log(\tau) + \frac{1}{2} \log(\prod_{i = 1}^n (1 - \rho \lambda_i)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
-
-$$= \frac{n}{2} \log(\tau) + \frac{1}{2} \sum_{i = 1}^n \log(1 - \rho \lambda_i) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
-
-The determinant term can be computed efficiently in Stan using the `log1m` function.
-The Stan implementation below is a direct extension of Kyle Foreman's sparse approximation (linked above), with two exceptions: 
-
-1. determinant approximations are replaced with exact calculations
-2. the spatial random effects are not artificially centered (this is a proper CAR model rather than an intrinsic autoregressive model - brute force centering is not necessary)
+$$p(\phi, \beta, \alpha, \tau \mid y) \propto p(y \mid \beta, \phi) p(\phi \mid \alpha, \tau) p(\alpha) p(\tau) p(\beta)$$
 
 ## Example: Scottish lip cancer data
 
-To demonstrate this approach we'll use the Scottish lip cancer data example (some documentation [here](https://cran.r-project.org/web/packages/CARBayesdata/CARBayesdata.pdf)).
+To demonstrate this approach we'll use the Scottish lip cancer data example (some documentation [here](https://cran.r-project.org/web/packages/CARBayesdata/CARBayesdata.pdf)). 
+This data set includes observed lip cancer case counts at 56 spatial units in Scotland, with an expected number of cases to be used as an offset, and an area-specific continuous covariate that represents the proportion of the population employed in agriculture, fishing, or forestry.
+The model structure is identical to the Poisson model outlined above. 
 
 ```{r, echo = FALSE, message = FALSE}
 library(shapefiles)
@@ -118,6 +96,7 @@ scotlips %>%
        plot.background = element_blank())
 ```
 
+Let's start by loading packages and data, specifying the number of MCMC iterations and chains.
 
 ```{r, message=FALSE}
 library(ggmcmc)
@@ -128,13 +107,9 @@ options(mc.cores = parallel::detectCores())
 source('scotland_lip_cancer.RData')
 
 # Define MCMC parameters 
-niter <- 9000   # definitely overkill, but good for comparison
+niter <- 1E4   # definitely overkill, but good for comparison
 nchains <- 4
-to_plot <- c('beta', 'tau', 'rho', 'phi[1]', 'phi[2]', 'phi[3]', 'lp__')
 ```
-
-
-## Full model 
 
 To fit the full model, we'll pull objects loaded with our Scotland lip cancer data. 
 I'll use `model.matrix` to generate a design matrix, centering and scaling the continuous covariate `x` to reduce correlation between the intercept and slope estimates. 
@@ -152,16 +127,67 @@ full_d <- list(n = nrow(X),         # number of observations
                log_offset = log(E), # log(expected) num. cases
                W = W,               # adjacency matrix
                D = D)               # diagonal num. neighbor matrix
+```
 
+#### Stan model statement: CAR with `multi_normal_prec`
+
+Our model statement mirrors the structure outlined above, with explicit normal and gamma priors on $\beta$ and $\tau$ respectively, and a $\text{Uniform}(0, 1)$ prior for $\alpha$. 
+The prior on $\phi$ is specified via the `multi_normal_prec` function, passing in $\tau (D - \alpha W)$ as the precision matrix.
+
+```{r comment='', echo = FALSE}
+cat(readLines('stan/car_prec.stan'), sep = '\n')
+```
+
+Fitting the model with `rstan`:
+
+```{r}
 full_fit <- stan('stan/car_prec.stan', data = full_d, 
                  iter = niter, chains = nchains, verbose = FALSE)
-print(full_fit, pars = c('beta', 'tau', 'rho', 'lp__'))
+print(full_fit, pars = c('beta', 'tau', 'alpha', 'lp__'))
+
+# visualize results 
+to_plot <- c('beta', 'tau', 'alpha', 'phi[1]', 'phi[2]', 'phi[3]', 'lp__')
 traceplot(full_fit, pars = to_plot)
 ```
 
-## Sparse implementation
+### A more efficient sparse representation
 
-For the sparse implementation, we first compute $\lambda_1, ..., \lambda_n$ (the eigenvalues of $D^{-\frac{1}{2}} W D^{-\frac{1}{2}}$), then generate a sparse representation for W (`Wsparse`), which is assumed to be symmetric, such that the adjacency relationships can be represented in a two column matrix where each row is an adjacency relationship between two sites. 
+Although we could specify our multivariate normal prior for $\phi$ directly in Stan via `multi_normal_prec`, as we did above, in this case we will accrue computational efficiency gains by manually specifying $p(\phi \mid \tau, \alpha)$ directly via the log probability accumulator. 
+The log probability of $\phi$ is: 
+
+$$\log(p(\phi \mid \tau, \alpha)) = - \frac{n}{2} \log(2 \pi) + \frac{1}{2} \log(\text{det}( \Sigma^{-1})) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+
+In Stan, we only need the log posterior up to an additive constant so we can drop the first term. 
+Then, substituting  $\tau (D - \alpha W)$ for $\Sigma^{-1}$:
+
+$$\frac{1}{2} \log(\text{det}(\tau (D - \alpha W))) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+
+$$ = \frac{1}{2} \log(\tau ^ n \text{det}(D - \alpha W)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+
+$$ = \frac{n}{2} \log(\tau) + \frac{1}{2} \log(\text{det}(D - \alpha W)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+
+There are two ways that we can accrue computational efficiency gains: 
+
+1. Sparse representations of $\Sigma^{-1}$ to expedite computation of $\phi^T \Sigma^{-1} \phi$ (this work was done by Kyle foreman previously, e.g., https://groups.google.com/d/topic/stan-users/M7T7EIlyhoo/discussion). 
+
+2. Efficient computation of the determinant. Jin, Carlin, and Banerjee (2005) show that:
+
+$$\text{det}(D - \alpha W) \propto \prod_{i = 1}^n (1 - \alpha \lambda_i)$$
+
+where $\lambda_1, ..., \lambda_n$ are the eigenvalues of $D^{-\frac{1}{2}} W D^{-\frac{1}{2}}$, which can be computed ahead of time and passed in as data. 
+Because we only need the log posterior up to an additive constant, we can use this result which is proportional up to some multiplicative constant $c$: 
+
+$$\frac{n}{2} \log(\tau) + \frac{1}{2} \log(c \prod_{i = 1}^n (1 - \alpha \lambda_i)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+
+$$= \frac{n}{2} \log(\tau) + \frac{1}{2} \log(c) +  \frac{1}{2} \log(\prod_{i = 1}^n (1 - \alpha \lambda_i)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+
+Again dropping additive constants: 
+
+$$\frac{n}{2} \log(\tau) + \frac{1}{2} \log(\prod_{i = 1}^n (1 - \alpha \lambda_i)) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+
+$$= \frac{n}{2} \log(\tau) + \frac{1}{2} \sum_{i = 1}^n \log(1 - \alpha \lambda_i) - \frac{1}{2} \phi^T \Sigma^{-1} \phi$$
+
+Below, we first compute $\lambda_1, ..., \lambda_n$ (the eigenvalues of $D^{-\frac{1}{2}} W D^{-\frac{1}{2}}$), then generate a sparse representation for W (`Wsparse`), which is assumed to be symmetric, such that the adjacency relationships can be represented in a two column matrix where each row is an adjacency relationship between two sites. 
 
 ```{r}
 # get eigenvalues of D^(-.5) * W * D^(-.5) for determinant computations
@@ -169,7 +195,7 @@ invsqrtD <- diag(1 / sqrt(diag(D)))
 quadformDAD <- invsqrtD %*% W %*% invsqrtD
 lambda <- eigen(quadformDAD)$values
 
-# from Kyle Foreman's script:
+# from Kyle Foreman:
 Wsparse <- which(W == 1, arr.ind = TRUE)
 Wsparse <- Wsparse[Wsparse[, 1] < Wsparse[, 2], ]  # removes duplicates
 
@@ -183,10 +209,23 @@ sp_d <- list(n = nrow(X),         # number of observations
              W2 = Wsparse[, 2],   # column 2 of neighbor pair matrix
              D_sparse = diag(D),  # number of neighbors for each site
              lambda = lambda)     # eigenvalues of D^(-.5) * W * D^(-.5)
+```
 
+### Stan model statement: sparse CAR
+
+The Stan model statement for the sparse implementation never constructs the precision matrix, and does not call any of the `multi_normal*` functions. 
+Instead, we use `target += ...` to add terms to the log probability. 
+
+```{r comment='', echo = FALSE}
+cat(readLines('stan/car_sparse.stan'), sep = '\n')
+```
+
+Fitting the model:
+
+```{r}
 sp_fit <- stan('stan/car_sparse.stan', data = sp_d, 
                iter = niter, chains = nchains, verbose = FALSE)
-print(sp_fit, pars = c('beta', 'tau', 'rho', 'lp__'))
+print(sp_fit, pars = c('beta', 'tau', 'alpha', 'lp__'))
 traceplot(sp_fit, pars = to_plot)
 ```
 
@@ -213,8 +252,6 @@ kable(efficiency)
 Let's compare the estimates to make sure that we get the same answer with both approaches. 
 In this case, I've used more MCMC iterations than we would typically need in to get a better estimate of the tails of each marginal posterior distribution so that we can compare the 95% credible intervals among the two approaches. 
 
-\newpage
-
 ```{r fig.height = 12, echo = FALSE, message = FALSE}
 post_full <- ggs(full_fit)
 post_full$model <- 'full'
@@ -239,7 +276,7 @@ psumm %>%
   ggtitle('Comparison on random effect estimates')
 ```
 
-\newpage
+
 
 ```{r, echo = FALSE, message = FALSE}
 # compare remaining estimates
@@ -254,26 +291,32 @@ psumm %>%
 
 The two approaches give the same answers (more or less, with small differences arising due to MCMC sampling error). 
 
-\newpage
+## Postscript: sparse IAR specification
 
-### Stan model statement: CAR with `multi_normal_prec`
+Although the IAR prior for $\phi$ that results from $\alpha = 1$ is improper, it remains popular (Besag, York, and Mollie, 1991). 
+In practice, these models are typically fit with a sum to zero constraint: $\sum_{i = 1}^n \phi_i = 0$.
+With $\alpha$ fixed to one, we have: 
+
+$$\log(p(\phi \mid \tau)) = - \frac{n}{2} \log(2 \pi) + \frac{1}{2} \log(\text{det}(\tau (D - W))) - \frac{1}{2} \phi^T \tau (D - W) \phi$$
+
+$$ = - \frac{n}{2} \log(2 \pi) + \frac{1}{2} \log(\tau^n \text{det}(D - W)) - \frac{1}{2} \phi^T \tau (D - W) \phi$$
+
+$$ = - \frac{n}{2} \log(2 \pi) + \frac{1}{2} \log(\tau^n) + \frac{1}{2} \log(\text{det}(D - W)) - \frac{1}{2} \phi^T \tau (D - W) \phi$$
+
+Dropping additive constants, the quantity to increment becomes: 
+
+$$ \frac{1}{2} \log(\tau^n) - \frac{1}{2} \phi^T \tau (D - W) \phi$$
+
+And the corresponding Stan syntax would be:
 
 ```{r comment='', echo = FALSE}
-cat(readLines('stan/car_prec.stan'), sep = '\n')
+cat(readLines('stan/iar_sparse.stan'), sep = '\n')
 ```
-
-\newpage
-
-### Stan model statement: sparse exact CAR
-
-```{r comment='', echo = FALSE}
-cat(readLines('stan/car_sparse.stan'), sep = '\n')
-```
-
-\newpage
 
 ## References
 
-Jin, Xiaoping, Bradley P. Carlin, and Sudipto Banerjee. "Generalized hierarchical multivariate CAR models for areal data." Biometrics 61.4 (2005): 950-961.
+Besag, Julian, Jeremy York, and Annie Mollié. "Bayesian image restoration, with two applications in spatial statistics." Annals of the institute of statistical mathematics 43.1 (1991): 1-20.
 
 Gelfand, Alan E., and Penelope Vounatsou. "Proper multivariate conditional autoregressive models for spatial data analysis." Biostatistics 4.1 (2003): 11-15.
+
+Jin, Xiaoping, Bradley P. Carlin, and Sudipto Banerjee. "Generalized hierarchical multivariate CAR models for areal data." Biometrics 61.4 (2005): 950-961.
